# substrate-protocol

./: .gitignore  README.md  plexus-protocol.cabal  substrate-protocol.cabal
docs/architecture/: 16679899679207890687_schema-query-refinement.md
src/: Plexus.hs
src/Plexus/: Client.hs  Schema.hs  Transport.hs  Types.hs
src/Plexus/Schema/: Recursive.hs
src/Substrate/: Client.hs  Transport.hs
