cabal-version:      3.0
name:               substrate-protocol
version:            0.2.0.0
synopsis:           Plexus protocol types and client for Substrate
license:            MIT
author:
maintainer:
build-type:         Simple

library
  exposed-modules:
    Substrate.Client
    Substrate.Transport
    Plexus
    Plexus.Types
    Plexus.Schema
    Plexus.Schema.Cache
    Plexus.Schema.Recursive
  build-depends:
    base ^>=4.17 || ^>=4.18 || ^>=4.19,
    aeson >= 2.0,
    text >= 2.0,
    bytestring >= 0.11,
    containers >= 0.6,
    websockets >= 0.13,
    network >= 3.1,
    async >= 2.2,
    stm >= 2.5,
    streaming >= 0.2,
    directory >= 1.3,
    filepath >= 1.4,
    time >= 1.9
  hs-source-dirs:   src
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    DeriveGeneric
    DeriveAnyClass
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    RecordWildCards
